debug/envoy.yaml
# Config for spinning up local Envoy with ExtAuthz for debugging the application
# docker run -v $PWD/envoy.yaml:/etc/envoy/envoy.yaml:ro --network host --rm envoyproxy/envoy:v1.14.1
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: root
          route_config:
            virtual_hosts:
            - name: root
              domains: ['*']
              routes:
              - match:
                  prefix: /roles
                route:
                  cluster: upstream
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthzPerRoute
                    check_settings:
                      context_extensions:
                        roles: Fv+DBAEBBVJvbGVzAf+EAAEMAf+CAAAM/4ECAQL/ggABDAAAGf+EAAIAAQZnbG9iYWwEdGVzdAEFbG9jYWw=
              - match:
                  prefix: /disabled
                route:
                  cluster: upstream
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthzPerRoute
                    disabled: true
              - match:
                  prefix: /
                route:
                  cluster: upstream
              typed_per_filter_config:
                envoy.filters.http.ext_authz:
                  '@type': type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthzPerRoute
                  check_settings:
                    context_extensions:
                      service: test
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              '@type': type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: ext-authz
                timeout: 86400s
          - name: envoy.filters.http.router
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: root
          route_config:
            virtual_hosts:
            - name: root
              domains: ['*']
              routes:
              - match:
                  prefix: /
                direct_response:
                  status: 200
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: upstream
    connect_timeout: 1s
    load_assignment:
      cluster_name: upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  - name: ext-authz
    connect_timeout: 1s
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
    http2_protocol_options: {}
